--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
     <link
     rel="icon"
     type="images/x-icon"
-    href="images/free-icon-mountain-bike-3149051.png"
+    href="images/icons/Cover_photo.svg"
     />
     <link
       rel="stylesheet"
